# bookstore

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  report.html
.github/workflows/: ci.yaml
configs/: bookstore_resource.py  wait_type.py
src/: authors_client.py  base_client.py  base_resoruces_client.py  books_client.py
src/clients/: authors_client.py  base_client.py  base_resoruces_client.py  books_client.py
src/schemas/: __init__.py  authors_schemas.py  books_schemas.py  common_schemas.py
tests/: test_placeholder.py
tests/authors/: test_authors.py
tests/books/: parametrized_test_example.py  test_books.py
tests/data/: author_test_data.py  book_test_data.py
utils/: path_resolver.py
